--- a/mech-warehouse-gui/src/styles/Registration.css
+++ b/mech-warehouse-gui/src/styles/Registration.css
@@ -1,5 +1,34 @@
 .Registration {
-    text-align: center;
-    padding-top: 20px;
-    padding-bottom: 20px;
+    background-color: rgb(24, 24, 24);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.Registration h2{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: rgb(186, 151, 14);
+    padding-bottom: 10px;
+}
+
+.registration-container {
+    background-color: rgb(47, 47, 47);
+    width: 600px;
+    padding: 30px 50px 30px ;
+    border-radius: 20px;
+}
+
+.white-label {
+    color: white;
+}
+
+.register-button {
+    width: 500px;
+}
+
+.form-button {
+    width: 230px;
 }
